# pickup-delivery-problem

./: Cargo.toml  readme.md
src/: input.rs  lib.rs  network.rs  output.rs
src/data/: generated.extralarge.1.txt  generated.extralarge.2.txt  generated.large.1.txt  generated.large.2.txt  generated.large.3.txt  generated.small.1.txt  generated.small.multiload.txt  generated.small.overload.txt
src/model/: edge.rs  mod.rs  order.rs  station.rs  train.rs
src/solver/: mod.rs  order_sorter.rs  utils.rs
src/solver/algorithms/: mod.rs  nearest_train_order_collection.rs  nearest_train_order_distribution.rs  nearest_train_single_order.rs
src/solvers/: deliver_order_by_nearest_train_multiload_collection.rs  deliver_order_by_nearest_train_multiload_distribution.rs  mod.rs  simple_nearest_train.rs  utils.rs
